--- a/css/about.css
+++ b/css/about.css
@@ -19,7 +19,7 @@
 }
 @media (max-width: 767px) {
   .contentAboutUs .aboutUs .description {
-    width: 85%;
+    width: 90%;
   }
 }
 .contentAboutUs .aboutUs .contentDetails {
@@ -31,6 +31,22 @@
   font-weight: 500;
   text-align: center;
   color: #000000;
+}
+.contentAboutUs .aboutUs .contentDetails img {
+  width: 100px !important;
+}
+.contentAboutUs .aboutUs .contentDetails .descriptionForImage {
+  width: 50%;
+}
+@media (max-width: 991px) {
+  .contentAboutUs .aboutUs .contentDetails .descriptionForImage {
+    width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .contentAboutUs .aboutUs .contentDetails .descriptionForImage {
+    width: 50%;
+  }
 }
 
 /*# sourceMappingURL=about.css.map */
