--- a/css/input.scss
+++ b/css/input.scss
@@ -58,8 +58,8 @@ body {
         .nav-link {
           padding: .5rem;
         }
-        p {
-          display: none;
+        .md-last {
+          border-right: none;
         }
       }
       .last {
@@ -368,12 +368,8 @@ body {
     @media (max-width: 767px) {
       display: block;
     }
-    .product {
-      h3 {
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
+    .widthCustom {
+      width: 42%;
     }
   }
 }
@@ -544,7 +540,7 @@ body {
       font-weight: 500;
     }
     @media (max-width: 991px) {
-      img{
+      img {
         width: 75px;
       }
       h2 {
@@ -589,7 +585,7 @@ body {
         border-right: 8px solid transparent;
         border-top: 8px solid #a0a0a0;
         position: absolute;
-        right: -2rem;
+        right: 1rem;
         top: 1rem;
         @media (min-width: 768px) {
           display: none;
@@ -603,6 +599,7 @@ body {
       }
       @media (max-width: 767px) {
         .list-group-item {
+          width: 100%;
           font-size: .9rem;
           font-family: Roboto;
         }
