--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ body {
   .topBar ul li .nav-link {
     padding: 0.5rem;
   }
-  .topBar ul li p {
-    display: none;
+  .topBar ul li .md-last {
+    border-right: none;
   }
 }
 .topBar ul li .last {
@@ -380,10 +380,8 @@ body {
     display: block;
   }
 }
-.panelExpertise .slideProduct .product h3 {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.panelExpertise .slideProduct .widthCustom {
+  width: 42%;
 }
 
 .contactPanel {
@@ -605,7 +603,7 @@ body {
   border-right: 8px solid transparent;
   border-top: 8px solid #a0a0a0;
   position: absolute;
-  right: -2rem;
+  right: 1rem;
   top: 1rem;
 }
 @media (min-width: 768px) {
@@ -621,6 +619,7 @@ body {
 }
 @media (max-width: 767px) {
   .productCategory .contentCategory .productDetails .list-group-item {
+    width: 100%;
     font-size: 0.9rem;
     font-family: Roboto;
   }
