--- a/css/input.scss
+++ b/css/input.scss
@@ -368,8 +368,8 @@ body {
     @media (max-width: 767px) {
       display: block;
     }
-    .widthCustom {
-      width: 42%;
+    h3 {
+      font-size: 1.5rem;
     }
   }
 }
