--- a/css/input.scss
+++ b/css/input.scss
@@ -368,6 +368,9 @@ body {
     @media (max-width: 767px) {
       display: block;
     }
+    .widthCustom {
+      width: 55%;
+    }
     h3 {
       font-size: 1.5rem;
     }
